--- a/yamcs-archetype-quickstart/src/main/resources/archetype-resources/README
+++ b/yamcs-archetype-quickstart/src/main/resources/archetype-resources/README
@@ -14,7 +14,7 @@ mvn yamcs:debug
 
     Same as yamcs:run, but allows a debugger to attach at port 7896.
 
-mvn yamcs:assemble
+mvn yamcs:bundle
 
     Generates a Yamcs distribution for your project.
 
